# py-card-game

./: .gitignore  main.py  pyproject.toml
pycardgame/: __main__.py  display.py  engine.py  models.py
